--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RETO19</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div>
+    
       <h1>El desempleo en España</h1>
-      <p>
+      <p1><h2>
         La siguiente table muestra la evolución del desempleo en España,
         comparado con la media de los 27 paises de la Unión Europea, <br> Grecia, que
         compite con España en ser el primero en esta vergonzosa competición y
         Estados Unidos y Japón, dos de las primeras <br> economías mundiales.
+      </h2>
       </p>
-      <div>
         <table class="content" border="3">
             <thead>
                 <tr>
@@ -53,7 +54,7 @@
                     <td>10.8</td>
                 </tr>
                 <tr>
-                    <th>España</th>
+                    <th class="country">España</th>
                     <th>11.9</th>
                     <th>10.6</th>
                     <th>11.5</th>
@@ -122,13 +123,12 @@
                 </tr>
             </thead>
         </table>
-
-      </div>
-    </div>
-    <div>
-        <p>
-            Fuente: <a href="indice.html" target="_self">Índice de desempleo anual</a>, Eurostat
-        </p>
-    </div>
+        <br>
+        <br>
+        <h3>
+            <p>
+                Fuente: <a href="indice.html" target="_self">Índice de desempleo anual</a>, Eurostat
+            </p>
+        </h3>
   </body>
 </html>
